<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:orientation="vertical"
    android:padding="8dip">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:paddingBottom="16dip"
            android:text="@string/activity_a"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/url_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/URL_label"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/editurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/url_view"
            android:ems="10"
            android:hint="@string/enter_url"
            android:textColorHint="#ffff00"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"

        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDialog"
            android:layout_centerInParent="true"
            android:text="@string/btn_start_dialog_label"
            android:background="#ffff00"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dip"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffff00" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/call_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/call_label"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/font_medium" />

        <EditText
            android:id="@+id/callurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/call_view"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:textColorHint="#ffff00"
            android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/callbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDialog"
            android:layout_centerInParent="true"
            android:text="@string/btn_start_ring_label"
            android:background="#8B0000"
            android:textColor="#ffffff"/>

    </RelativeLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dip"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffff00" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
    <Button
        android:id="@+id/btn_finish_a"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:onClick="finishActivityA"
        android:layout_marginTop="10dp"
        android:text="@string/btn_finish_a_label" />
    </RelativeLayout>
</LinearLayout>

